--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "18.16.3",
     "@types/react": "18.2.2",
     "@types/react-dom": "18.2.3",
@@ -19,6 +20,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "fuzzball": "^2.1.2",
+    "lodash": "^4.17.21",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
